--- a/src/index.jade
+++ b/src/index.jade
@@ -19,35 +19,80 @@ html
         h2 Default Calculator
         div#default
           div#result
-            div#input 10 * 10
+            div#input 10*10
+            br
             br
             div#hasil 100
 
-          div#template
-            button.bCyan.button(onclick = 'something()') mc
-            button.bCyan.button m+
-            button.bCyan.button m-
-            button.bCyan.button mr
-            button.bBlue.button AC
-            button.bBlue.button C
-            button.bBlue.button ±
-            button.bBlue.button ÷
-            button.bGray.button 7
-            button.bGray.button 8
-            button.bGray.button 9
-            button.bBlue.button x
-            button.bGray.button 4
-            button.bGray.button 5
-            button.bGray.button(onclick = '') 6
-            button.bBlue.button -
-            button.bGray.button 1
-            button.bGray.button 2
-            button.bGray.button 3
-            button.bBlue.button +
-            button.bGray.button 0
-            button.bGray.button 00
-            button.bGray.button .
-            button.bRed.button =
+          div#keys
+            button.bCyan.key mc
+            button.bCyan.key m+
+            button.bCyan.key m-
+            button.bCyan.key mr
+            button.bBlue.key AC
+            button.bBlue.key C
+            button.bBlue.key ±
+            button.bBlue.key ÷
+            button.bGray.key.num(onclick = "addDigit()") 7
+            button.bGray.key.num(onclick = "addDigit()") 8
+            button.bGray.key.num(onclick = "addDigit()") 9
+            button.bBlue.key x
+            button.bGray.key.num(onclick = "addDigit()") 4
+            button.bGray.key.num(onclick = "addDigit()") 5
+            button.bGray.key.num(onclick = "addDigit()") 6
+            button.bBlue.key -
+            button.bGray.key.num(onclick = "addDigit()") 1
+            button.bGray.key.num(onclick = "addDigit()") 2
+            button.bGray.key.num(onclick = "addDigit()") 3
+            button.bBlue.key +
+            button.bGray.key.num(onclick = "addDigit()") 0
+            button.bGray.key.num(onclick = "addDigit()") 00
+            button.bGray.key .
+            button.bRed.key =
       section
     script(src='build/build.js').
-      var something = function() { console.log('something')}
+      var keychars = document.querySelectorAll(".num").value;
+      var operators = ['+', '-', 'x', '÷'];
+      var decimalAdded = false;
+      for(var i = 0; i < keys.length; i++) {
+        keys[i].onclick = function(e) {
+          var input = document.querySelector('#hasil');
+          var inputVal = input.innerHTML;
+          var btnVal = this.innerHTML;
+          if(btnVal == 'C') {
+            input.innerHTML = '';
+            decimalAdded = false;
+          }
+          else if(btnVal == '=') {
+            var equation = inputVal;
+            var lastChar = equation[equation.length - 1];
+            equation = equation.replace(/x/g, '*').replace(/÷/g, '/');
+            if(operators.indexOf(lastChar) > -1 || lastChar == '.')
+              equation = equation.replace(/.$/, '');
+      
+            if(equation)
+              input.innerHTML = eval(equation);
+        
+            decimalAdded = false;
+
+            else if(operators.indexOf(btnVal) > -1) {
+              var lastChar = inputVal[inputVal.length - 1];
+              if(inputVal != '' && operators.indexOf(lastChar) == -1) 
+                input.innerHTML += btnVal;
+              else if(inputVal == '' && btnVal == '-') 
+                input.innerHTML += btnVal;
+              if(operators.indexOf(lastChar) > -1 && inputVal.length > 1) {
+                input.innerHTML = inputVal.replace(/.$/, btnVal);
+              }
+              decimalAdded =false;
+            }
+          else if(btnVal == '.') {
+            if(!decimalAdded) {
+            input.innerHTML += btnVal;
+            decimalAdded = true;
+          }
+          else {
+            input.innerHTML += btnVal;
+          }
+        }
+      }
