--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,5 +1,5 @@
 div#default
-	background : black
+	background : #202060
 	border : 0px solid
 	border-radius : 10px
 	margin : 0px auto
@@ -8,33 +8,38 @@ div#default
 
 div#result
 	color : black
-	background : white
+	background : #E0FFE0
 	border : 0px solid
 	border-radius : 5px
 	margin : 20px 20px 10px
 	width : 280px
 	height : 80px
 
+div#result div p 
+	text-align : right
+
 div#input
 	background : transparent
 	color : black
 	font-size : 24px
+	float : right
 	text-align : right
-	direction : rtl
+	direction = rtl
 	
 div#hasil
 	background : transparent
 	color : black
-	font-size : 24px
+	font-size : 36px
+	float : right
 	text-align : right
-	direction : rtl
+	direction = rtl
 
-div#template
+div#keys
 	width : 320px
 	height : 210px
 	padding : 0px 10px 15px
 
-.button
+.key
 	float : left
 	margin : 5px 10px
 	width : 55px
