--- a/Currency Converter/src/index.jade
+++ b/Currency Converter/src/index.jade
@@ -7,4 +7,20 @@ doctype html
 				section
 					h1
 						hello World
-						
+					h2
+						Hello Guest
+					h3
+				section
+					h1
+						currency
+						select
+							option	USD
+							option	IDR
+					h1
+						currency
+						select
+							option	IDR
+							option	USD
+				section
+					h1
+						Currency Converter
