--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -4,7 +4,7 @@ div#default
 	border-radius : 10px
 	margin : 0px auto
 	width : 320px
-	height : 335px
+	height : 260px
 
 div#result
 	color : black
@@ -13,12 +13,12 @@ div#result
 	border-radius : 5px
 	margin : 20px 20px 10px
 	width : 280px
-	height : 80px
+	height : 40px
 
 div#result div p 
 	text-align : right
 
-div#input
+div#command
 	background : transparent
 	color : black
 	font-size : 24px
@@ -36,7 +36,7 @@ div#hasil
 
 div#keys
 	width : 320px
-	height : 210px
+	height : 145px
 	padding : 0px 10px 15px
 
 .key
