--- a/Push7/main.styl
+++ b/Push7/main.styl
@@ -34,6 +34,13 @@ div .two .left
     font-size : 16px;
 }
 
+div .two .left input#tax
+{
+    border : 1px solid black;
+    width : 60px;
+    padding : 5px;
+}
+
 div .two .center
 {
     clear : both;
