Seventh Commit / Updated Image

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,4 +1,17 @@
 /* A) Default Calculator */
+.bespoke-parent
+    background-image : url("../images/Web_Background.jpg")
+    background-repeat : no-repeat
+    background-position : center 
+    background-attachment : fixed
+    background-size : 160% auto
+
+.bespoke-slide 
+	background-image :url("../images/Dark_Purple_Metal.jpg")
+
+.bespoke-active
+	color : white
+
 div#default
 	background : #202060
 	border-radius : 10px
